--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MediaCoreDemo</string>
     <string name="record">record</string>
     <string name="done">done</string>
+    <string name="select">select a video</string>
 </resources>
