change jcenter config

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -6,4 +6,7 @@
 	<string name="add_music">添加音乐</string>
 	<string name="record_video">视频录制</string>
 	<string name="back">返回</string>
+	<string name="done">完成</string>
+	<string name="publish">完成</string>
+	<string name="record">录制</string>
 </resources>
